--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
     color: var(--text-color);
     background-color: var(--background-color);
@@ -29,7 +29,6 @@ h1 {
 
 h2 {
     color: var(--primary-color);
-    text-align: center;
 }
 
 .section {
